--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Sample App</h1>
 <p>
-  This is the home page for the my new
+  This is the home page for the
   <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
   sample application.
 </p>
